--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Hope Foundation - Empowering Communities, Transforming Lives | NGO</title>
+    <title>Aparigraha Foundation | NGO</title>
     <meta name="description" content="Hope Foundation is a leading NGO empowering underserved communities worldwide through sustainable education, healthcare, and development programs. Join our mission to create lasting positive change." />
     <meta name="author" content="Hope Foundation" />
 
