theme changed, favicon logo, hero logo changed

--- a/index.html
+++ b/index.html
@@ -10,16 +10,17 @@
     <meta property="og:title" content="Hope Foundation - Empowering Communities, Transforming Lives" />
     <meta property="og:description" content="Join Hope Foundation in creating lasting positive change through education, healthcare, and community development programs in 45+ countries. 500K+ lives transformed." />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:image" content="./public/logo.png" />
 
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@hopefoundation" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta name="twitter:image" content="./public/logo.png" />
 
     <!-- SEO Keywords -->
     <meta name="keywords" content="NGO, charity, nonprofit, education, healthcare, community development, global impact, donations, volunteer, sustainable development, poverty alleviation, social change" />
     <meta name="robots" content="index, follow" />
     <link rel="canonical" href="https://hopefoundation.org" />
+    <link rel="icon" type="image/png" href="/logo.png" />
   </head>
 
   <body>
